--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('https://cdn.discordapp.com/attachments/1398807430636507208/1437172296136785940/iEZeoQAnJ1MTHSFG.gif?ex=6922c140&is=69216fc0&hm=96f9fa4543e36d158377a005d9002f4fcac4ac854d26fb1d04bcbcd7969c9d58&') no-repeat center center fixed;
+            background: url('https://cdn.discordapp.com/attachments/1398807430636507208/1437172296136785940/iEZeoQAnJ1MTHSFG.gif?ex=6924bb80&is=69236a00&hm=739e9315743875dc4e243447e76ba1c866a54f7102802ffb150f58c38c900119&') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Courier New', Courier, monospace;
             color: #000000;
@@ -19,17 +19,6 @@
             flex-direction: column;
             text-align: center;
         }
-
-        .corner-img {
-            position: absolute;
-            width: 180px; /* الحجم الجديد */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.7);
-        }
-        .top-left { top: 10px; left: 10px; }
-        .top-right { top: 10px; right: 10px; }
-        .bottom-left { bottom: 10px; left: 10px; }
-        .bottom-right { bottom: 10px; right: 10px; }
 
         .info {
             margin-top: 20px;
@@ -51,17 +40,11 @@
 </head>
 <body>
 
-    <!-- الصور في الزوايا -->
-    <img src="https://files.catbox.moe/rpkc7j.jpg" class="corner-img top-left">
-    <img src="https://files.catbox.moe/rpkc7j.jpg" class="corner-img top-right">
-    <img src="https://files.catbox.moe/rpkc7j.jpg" class="corner-img bottom-left">
-    <img src="https://files.catbox.moe/rpkc7j.jpg" class="corner-img bottom-right">
-
     <audio autoplay loop>
         <source src="https://files.catbox.moe/q0t0of.m4a" type="audio/mpeg">
     </audio>
 
-    <div class="text">Fucked By Duśkwitherتحسب اذا بندتني مااقدر ارجع يحمار؟ برا يامخنث انت وياه وكسم اي واحد قذف فيكم و خشو الدس يامخانيث</div>
+    <div class="text">Śecurity Alert Duśkwither On The System الي مايخش الدس قي</div>
 
     <div class="info" id="ip-info">
         <strong>IP: <span id="ip"></span></strong><br>
@@ -73,7 +56,7 @@
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
 
-    <div class="text">discord.gg/VVMWhGeRvM</div>
+    <div class="text">Discord.gg/VVMWhGeRvM</div>
 
     <script>
         fetch('https://ipinfo.io/json')
